--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "test": "jest"
   },
   "dependencies": {
     "vue": "^3.0.5",
@@ -18,6 +19,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-only-warn": "^1.0.2",
     "eslint-plugin-vue": "^7.12.1",
+    "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "sass": "^1.35.1",
     "vite": "^2.3.8"
